Bug 24635 - File Descriptor leaks in libxaw-1.0.7
Summary: File Descriptor leaks in libxaw-1.0.7
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xaw (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-20 01:21 UTC by Eric Sesterhenn
Modified: 2009-10-20 08:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix file descriptor leaks (841 bytes, patch)
2009-10-20 01:21 UTC, Eric Sesterhenn
no flags Details | Splinter Review

Description Eric Sesterhenn 2009-10-20 01:21:46 UTC
Created attachment 30581 [details] [review]
fix file descriptor leaks

hi,

cppcheck reported two file descriptor leaks in libxaw

[libXaw-1.0.7/src/AsciiSrc.c:1297]: (error) Resource leak: fd
[libXaw-1.0.7/src/AsciiSrc.c:1353]: (error) Resource leak: fd

Attached patch fixes both cases.

Regards, Eric
Comment 1 Alan Coopersmith 2009-10-20 08:21:26 UTC
Applied, with one small change to allow it to actually compile:
-       close(fd)
+       close(fd);


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.