Bug 24635: File Descriptor leaks in libxaw-1.0.7

http://bugs.freedesktop.org/show_bug.cgi?id=24635

(Adapted from libXaw commit f373e193a48eaf6d799d0b6ad32fd58d8ae8b3bd.)

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>